--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,11 @@ body {
     Color: black;
 }
 
+.container {
+    justify-content: center;
+    align-items: center;
+}
+
 .nav-transition {
     animation-name: navegacao;
     animation-duration: 5s;
@@ -59,6 +64,7 @@ body {
 
 .profile-pic {
     margin-top: 4rem;
+    width: 30rem!important;
 
     animation-name: profile-capa;
     animation-duration: 3s;
@@ -103,10 +109,18 @@ body {
     }
 }
 
+.padding-img {
+    padding-top: 20px;
+}
+
 
 @media (max-width: 800px) {
     .container {
         max-width: 92%;
+    }
+    .font-name {
+        font-size: 3rem;
+        color: #ff9a3c;
     }
 
     .nav-transition li {
@@ -115,15 +129,6 @@ body {
 
     .nav-transition li.threeline-icon {
         display: inline-block;
-    }
-
-    .profile-pic {
-        width: 32rem;
-        margin-top: 3rem;
-
-
-        animation-name: profile-capa;
-        animation-duration: 3s;
     }
 
     .menu {
@@ -140,6 +145,7 @@ body {
     .menu li {
         display: block;
         border-bottom: solid #155263 1px;
+        font-size: 20px;
     }
 
     .menu li.threeline-icon {
@@ -149,5 +155,9 @@ body {
 
     .menu a {
         text-decoration: none;
+    }
+
+    .padding-img {
+        padding-top: 20px;
     }
 }
