--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ body {
 
 .profile-pic {
     margin-top: 4rem;
-    width: 30rem!important;
+    width: 30rem !important;
 
     animation-name: profile-capa;
     animation-duration: 3s;
@@ -73,6 +73,43 @@ body {
 .transition-name {
     animation-name: titulo-capa;
     animation-duration: 3s;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.5); /* Black see-through */
+    color: #f1f1f1;
+    width: 100%;
+    height: 100%;
+    transition: .5s ease;
+    opacity:0;
+    color: white;
+    font-size: 20px;
+    padding: 20px;
+    text-align: center;
+}
+
+.card:hover .overlay {
+    opacity: 1;
+}
+
+.btn-outline-info {
+    --bs-btn-color: #ffc93c!important;
+    --bs-btn-border-color: #ffc93c!important;
+    --bs-btn-hover-color: #000;
+    --bs-btn-hover-bg: #ffc93c!important;
+    --bs-btn-hover-border-color: #ffc93c!important;
+    --bs-btn-focus-shadow-rgb: 13,202,240;
+    --bs-btn-active-color: #000;
+    --bs-btn-active-bg: #ffc93c!important;
+    --bs-btn-active-border-color: #ffc93c!important;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #ffc93c!important;
+    --bs-btn-disabled-bg: transparent;
+    --bs-btn-disabled-border-color: #ffc93c!important;
+    --bs-gradient: none;
 }
 
 @keyframes profile-capa {
@@ -113,11 +150,27 @@ body {
     padding-top: 20px;
 }
 
+ol.carousel-indicators li,
+ol.carousel-indicators li.active {
+    float: left;
+    width: 33%;
+    height: 10px;
+    margin: 0;
+    border-radius: 0;
+    border: 0;
+    background: transparent;
+}
+
+ol.carousel-indicators li.active {
+    background: #ff6f3c;
+}
+
 
 @media (max-width: 800px) {
     .container {
         max-width: 92%;
     }
+
     .font-name {
         font-size: 3rem;
         color: #ff9a3c;
